# Prometheus

./: .gitignore  .markdownlintignore  .mcp.json  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  settings.example.json
.claude/commands/: experiment-design.md  gap-analysis.md  idea-generation.md  tools.md
docs/plans/: 2026-02-23-deep-research-design.md  2026-02-23-tools-strategies-design.md  2026-02-24-prometheus-redesign-design.md  2026-02-24-prometheus-redesign-plan.md  2026-02-25-research-workflow-design.md  2026-02-25-research-workflow-plan.md  2026-02-25-web-search-design.md  2026-02-27-iterative-loop-engine-design.md  2026-02-28-supervisor-architecture-design.md
prometheus/: __init__.py
prompt/: environment-setup.md  evaluate-answer.md  experiment-task.md  gap-discovery.md  hardware-estimation.md  idea-scoring.md  paper-rating.md  paper-reading.md  reflect-gaps.md  validate-experiment.md  validate-gap.md  validate-idea.md  validate-survey.md
skill/: apify.md  experiment-design.md  experiment-execution.md  gap-analysis.md  idea-generation.md  literature-survey.md  prometheus.md  research.md  tools.md
src/: mcp_server.ts  pdf2markdown.ts  service_pdf_ocr.py  types.ts  utils_arxiv.ts  utils_markdown.ts  utils_paper.ts  utils_pdf.ts
src/modal/: pdf2markdown.py
src/supervisor/: package-lock.json  package.json  process.ts  server.ts  state.ts  transport.ts  tsconfig.json  types.ts
src/tools/: academic.ts  markdown.ts  perplexity.ts  web.ts
src/utils/: apify.ts  arxiv.ts  brave.ts  markdown.ts  misc.ts  pdf.ts  perplexity.ts  ss.ts  (+3 more)
